modified for deregister...

--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -12,17 +12,11 @@
   <connectionStrings>
     <!--Local Server Connection for RTLS Database -->
 
-    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=Pavithra;persistsecurityinfo=True;database=meetgreetdb;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=12345;persistsecurityinfo=True;database=DeregisterAPI;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
 
-    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=Pavithra;persistsecurityinfo=True;database=meetgreetdb;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=12345;persistsecurityinfo=True;database=DeregisterAPI;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
     
-    <!--<add name="DefaultConnection" connectionString="server=localhost;user id=root;password=abcd;persistsecurityinfo=True;database=a8DbNewVersion1" providerName="MySql.Data.MySqlClient" />-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=RTLS;Integrated Security=True;connect timeout=900;" providerName="System.Data.SqlClient" />
-    <add name="DbEntities" connectionString="metadata=res://*/Models.RTLS.csdl|res://*/Models.RTLS.ssdl|res://*/Models.RTLS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=RTLS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <!--Azure Server Connection for RTLS database-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=airloc8-d2-dashboard.database.windows.net;Initial Catalog=RTLS;User Id=DBAdmin;Password=a1rl0c84zur3!;connect timeout=900;" providerName="System.Data.SqlClient" />
-   <add name="DbEntities" connectionString="metadata=res://*/Models.RTLS.csdl|res://*/Models.RTLS.ssdl|res://*/Models.RTLS.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=airloc8-d2-dashboard.database.windows.net;Initial Catalog=RTLS;User Id=DBAdmin;Password=a1rl0c84zur3!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  </connectionStrings>
+   </connectionStrings>
   <appSettings>
     <add key="log4net.Internal.Debug" value="true" />
     <add key="webpages:Version" value="3.0.0.0" />
