Added the changes for existing Mac's to save again

--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -12,9 +12,9 @@
   <connectionStrings>
     <!--Local Server Connection for RTLS Database -->
 
-    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=12345;persistsecurityinfo=True;database=DeregisterAPI;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
 
-    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=12345;persistsecurityinfo=True;database=DeregisterAPI;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
     
    </connectionStrings>
   <appSettings>
