--- a/RTLS.Domins/RTLS.Domins.csproj
+++ b/RTLS.Domins/RTLS.Domins.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Device.cs" />
     <Compile Include="DeviceAssociateSite.cs" />
     <Compile Include="Enums\CutomEnum.cs" />
+    <Compile Include="Enums\LocationServicesType.cs" />
     <Compile Include="Enums\DeviceRegisteredInEngine.cs" />
     <Compile Include="Enums\RtlsEngine.cs" />
     <Compile Include="FilterLocationData.cs" />
@@ -109,12 +110,15 @@
     <Compile Include="Identity\EmailService.cs" />
     <Compile Include="Identity\IdentityModels.cs" />
     <Compile Include="Identity\SmsService.cs" />
+    <Compile Include="JsonIgnoreAttribute.cs" />
+    <Compile Include="NetWorkOfSite.cs" />
     <Compile Include="OmniDeviceMapping.cs" />
     <Compile Include="RtlsArea.cs" />
     <Compile Include="RtlsNotificationData.cs" />
     <Compile Include="Site.cs" />
     <Compile Include="SiteFloor.cs" />
     <Compile Include="TrackMacNotification.cs" />
+    <Compile Include="UsersAddress.cs" />
     <Compile Include="ViewModels\EngageRegisterDevice.cs" />
     <Compile Include="ViewModels\FilterLocationData.cs" />
     <Compile Include="ViewModels\jQueryDataTableParamModel.cs" />
@@ -136,6 +140,8 @@
     <Compile Include="ViewModels\RtlsAreaViewModel.cs" />
     <Compile Include="ViewModels\SecomLogin.cs" />
     <Compile Include="ViewModels\SecomRegisterDevice.cs" />
+    <Compile Include="WifiUser.cs" />
+    <Compile Include="WifiUserLoginCredential.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
