--- a/RTLS.Common/RTLS.Common.csproj
+++ b/RTLS.Common/RTLS.Common.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonHasher.cs" />
     <Compile Include="EngageEngineClient.cs" />
     <Compile Include="SecomClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
