--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -16,9 +16,9 @@
     <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />-->
 
 
-    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=12345;persistsecurityinfo=True;database=DeregisterAPI;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
 
-    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=12345;persistsecurityinfo=True;database=DeregisterAPI;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
 
   </connectionStrings>
   <appSettings>
@@ -34,7 +34,7 @@
     <add key="SecomAPI" value="https://api.fattiengage.com/" />
     <add key="SecomLoginUname" value="james_clarke@secom.co.uk" />
     <add key="SecomLoginPassword" value="96fl4d9s" />
-
+    <add key="SecurityKey" value="Tes123456"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
