Added the changes for Rtls setup page changes to show email,firstname and lastname

--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -11,12 +11,16 @@
   </configSections>
   <connectionStrings>
     <!--Local Server Connection for RTLS Database -->
+    <!--<add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
 
-    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=12345;persistsecurityinfo=True;database=a8platformsprint37381;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />-->
 
-    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=12345;persistsecurityinfo=True;database=a8platformsprint37381" providerName="MySql.Data.MySqlClient" />
-    
-   </connectionStrings>
+
+    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+
+    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+
+  </connectionStrings>
   <appSettings>
     <add key="log4net.Internal.Debug" value="true" />
     <add key="webpages:Version" value="3.0.0.0" />
@@ -30,7 +34,7 @@
     <add key="SecomAPI" value="https://api.fattiengage.com/" />
     <add key="SecomLoginUname" value="james_clarke@secom.co.uk" />
     <add key="SecomLoginPassword" value="96fl4d9s" />
-
+    <add key="SecurityKey" value="Tes123456"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
