Added the missing package

--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -34,7 +34,7 @@
     <add key="SecomAPI" value="https://api.fattiengage.com/" />
     <add key="SecomLoginUname" value="james_clarke@secom.co.uk" />
     <add key="SecomLoginPassword" value="96fl4d9s" />
-    <add key="SecurityKey" value="Tes123456"/>
+    <add key="SecurityKey" value="Tes123456" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -129,7 +129,7 @@
     <DbProviderFactories>
       
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-    <remove invariant="MySql.Data.MySqlClient" /><add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" /></DbProviderFactories>
+    <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" /><remove invariant="MySql.Data.MySqlClient" /></DbProviderFactories>
   </system.data>
   <system.codedom>
     <compilers>
