--- a/RTLS.Domins/RTLS.Domins.csproj
+++ b/RTLS.Domins/RTLS.Domins.csproj
@@ -119,6 +119,7 @@
     <Compile Include="SiteFloor.cs" />
     <Compile Include="TrackMacNotification.cs" />
     <Compile Include="UsersAddress.cs" />
+    <Compile Include="ViewModels\CPUserGuestIdMapping.cs" />
     <Compile Include="ViewModels\EngageRegisterDevice.cs" />
     <Compile Include="ViewModels\FilterLocationData.cs" />
     <Compile Include="ViewModels\jQueryDataTableParamModel.cs" />
@@ -127,6 +128,7 @@
     <Compile Include="ViewModels\LocationsViewModel.cs" />
     <Compile Include="ViewModels\MonitorDevice.cs" />
     <Compile Include="ViewModels\Notification.cs" />
+    <Compile Include="ViewModels\OmniAddUsers.cs" />
     <Compile Include="ViewModels\OmniRequest\RequestOmniModel.cs" />
     <Compile Include="ViewModels\PagedResultsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
