Make the VenueId Configurable for Guest API.

--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -16,9 +16,9 @@
     <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />-->
 
 
-    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+    <add name="A8AdminModelEntity" connectionString="server=122.166.202.201; Uid=root;Pwd=p1s4Bmn;persistsecurityinfo=True;database=Sprint46Final;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
 
-    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8platformsprint35-36;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+    <add name="DefaultConnection" connectionString="server=122.166.202.201; Uid=root;Pwd=p1s4Bmn;persistsecurityinfo=True;database=Sprint46Final;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
 
   </connectionStrings>
   <appSettings>
@@ -35,6 +35,7 @@
     <add key="SecomLoginUname" value="james_clarke@secom.co.uk" />
     <add key="SecomLoginPassword" value="96fl4d9s" />
     <add key="SecurityKey" value="Tes123456" />
+    <add key="VenueId" value="e2c39ffc741a4d179a541085e838c49d"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
